@@ -1,5 +1,5 @@
 /*
- * Copyright 2014-2020 the original author or authors.
+ * Copyright 2014-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -123,13 +123,18 @@ public class SimpleRabbitListenerContainerFactory
 
 	/**
 	 * Set to true to present a list of messages based on the {@link #setBatchSize(Integer)},
-	 * if the listener supports it.
+	 * if the listener supports it. Starting with version 3.0, setting this to true will
+	 * also {@link #setBatchListener(boolean)} to true.
 	 * @param consumerBatchEnabled true to create message batches in the container.
 	 * @since 2.2
 	 * @see #setBatchSize(Integer)
+	 * @see #setBatchListener(boolean)
 	 */
 	public void setConsumerBatchEnabled(boolean consumerBatchEnabled) {
 		this.consumerBatchEnabled = consumerBatchEnabled;
+		if (consumerBatchEnabled) {
+			setBatchListener(true);
+		}
 	}
 
 	@Override
